azure-store.yaml
- apiVersion: v1
  kind: Namespace
  metadata:
    name: azure-store-1749707849581
  spec:
    finalizers:
      - kubernetes
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: rabbitmq
    namespace: azure-store-1749707849581
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: rabbitmq
    template:
      metadata:
        labels:
          app: rabbitmq
      spec:
        nodeSelector:
          kubernetes.io/os: linux
        containers:
          - name: rabbitmq
            image: >-
              mcr.microsoft.com/mirror/docker/library/rabbitmq:3.10-management-alpine
            ports:
              - containerPort: 5672
                name: rabbitmq-amqp
              - containerPort: 15672
                name: rabbitmq-http
            resources:
              requests:
                cpu: 10m
                memory: 128Mi
              limits:
                cpu: 250m
                memory: 256Mi
            volumeMounts:
              - name: rabbitmq-enabled-plugins
                mountPath: /etc/rabbitmq/enabled_plugins
                subPath: enabled_plugins
        volumes:
          - name: rabbitmq-enabled-plugins
            configMap:
              name: rabbitmq-enabled-plugins
              items:
                - key: rabbitmq_enabled_plugins
                  path: enabled_plugins
- apiVersion: v1
  data:
    rabbitmq_enabled_plugins: |
      [rabbitmq_management,rabbitmq_prometheus,rabbitmq_amqp1_0].
  kind: ConfigMap
  metadata:
    name: rabbitmq-enabled-plugins
    namespace: azure-store-1749707849581
- apiVersion: v1
  kind: Service
  metadata:
    name: rabbitmq
    namespace: azure-store-1749707849581
  spec:
    selector:
      app: rabbitmq
    ports:
      - name: rabbitmq-amqp
        port: 5672
        targetPort: 5672
      - name: rabbitmq-http
        port: 15672
        targetPort: 15672
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: order-service
    namespace: azure-store-1749707849581
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: order-service
    template:
      metadata:
        labels:
          app: order-service
      spec:
        nodeSelector:
          kubernetes.io/os: linux
        containers:
          - name: order-service
            image: ghcr.io/azure-samples/aks-store-demo/order-service:latest
            ports:
              - containerPort: 3000
            resources:
              requests:
                cpu: 1m
                memory: 50Mi
              limits:
                cpu: 75m
                memory: 128Mi
- apiVersion: v1
  kind: Service
  metadata:
    name: order-service
    namespace: azure-store-1749707849581
  spec:
    type: ClusterIP
    ports:
      - name: http
        port: 3000
        targetPort: 3000
    selector:
      app: order-service
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: product-service
    namespace: azure-store-1749707849581
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: product-service
    template:
      metadata:
        labels:
          app: product-service
      spec:
        nodeSelector:
          kubernetes.io/os: linux
        containers:
          - name: product-service
            image: ghcr.io/azure-samples/aks-store-demo/product-service:latest
            ports:
              - containerPort: 3002
            resources:
              requests:
                cpu: 1m
                memory: 1Mi
              limits:
                cpu: 1m
                memory: 7Mi
- apiVersion: v1
  kind: Service
  metadata:
    name: product-service
    namespace: azure-store-1749707849581
  spec:
    type: ClusterIP
    ports:
      - name: http
        port: 3002
        targetPort: 3002
    selector:
      app: product-service
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: store-front
    namespace: azure-store-1749707849581
  spec:
    replicas: 1
    selector:
      matchLabels:
        app: store-front
    template:
      metadata:
        labels:
          app: store-front
      spec:
        nodeSelector:
          kubernetes.io/os: linux
        containers:
          - name: store-front
            image: ghcr.io/azure-samples/aks-store-demo/store-front:latest
            ports:
              - containerPort: 8080
                name: store-front
            resources:
              requests:
                cpu: 1m
                memory: 200Mi
              limits:
                cpu: 1000m
                memory: 512Mi
- apiVersion: v1
  kind: Service
  metadata:
    name: store-front
    namespace: azure-store-1749707849581
  spec:
    ports:
      - port: 80
        targetPort: 8080
    selector:
      app: store-front
    type: LoadBalancer
