new-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-app
  labels:
    app: upload
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload
  template:
    metadata:
      labels:
        app: upload
    spec:
      containers:
      - name: upload-container
        image: taj070796/upload
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
spec:
  selector:
    app: upload
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
